--- a/reference/s2s-transaction-api.v1.0.yaml
+++ b/reference/s2s-transaction-api.v1.0.yaml
@@ -141,23 +141,23 @@ components:
     SecurityModule:
       title: SecurityModule
       type: object
-      description: 'Details about the cryptographic Hardware Security Module (HSM) '
+      description: 'Details about the cryptographic Hardware Security Module (HSM). '
       properties:
         serial:
           type: string
-          description: Serial number of the device used
+          description: Serial number of the HSM.
           example: 01000000F00019C8
         sequencer:
           type: integer
-          description: Sequence number assigned by the device
+          description: Sequence number of the HsM.
           example: 734595
         time:
           type: string
-          description: Real-time clock value at the time of signing
+          description: Real-time clock value of the HSM.
           example: '2020-09-30T18:30:23Z'
         keyId:
           type: string
-          description: Identifier of the key pair currently in use on the HSM
+          description: Identifier of the key pair on the HSM.
           example: 308C-1328-3940-DC32
     StoredRecord:
       title: StoredRecord
@@ -173,7 +173,7 @@ components:
           type: string
           description: Unique record identifier for the stored record
           example: EX191109870000000125
-        transactionTime:
+        timestamp:
           type: string
           format: date-time
           description: Timestamp of the stored record
@@ -245,7 +245,7 @@ paths:
       tags:
         - Transactions
     parameters: []
-  /server-status:
+  /transactions/status:
     get:
       summary: Server Status
       responses:
@@ -340,7 +340,7 @@ paths:
                         serial: 01000000F00019C5
                         sequencer: 39459
                         keyId: 308C-1328-3940-DC32
-      operationId: get-server-status
+      operationId: get-transactions-status
       description: Get current status of the transaction server.
       tags:
         - Status
